Update Blog “2018-09-30-ビットコイン原論文解説　第11章「計算」”

--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
@@ -71,24 +71,24 @@ tags:
 >
 > Converting to C code...
 
-```c
+```
 #include <math.h>
 double AttackerSuccessProbability(double q, int z)
 {
- double p = 1.0 - q;
- double lambda = z * (q / p);
- double sum = 1.0;
- int i, k;
- for (k = 0; k <= z; k++)
- {
- double poisson = exp(-lambda);
- for (i = 1; i <= k; i++)
- poisson *= lambda / i;
- sum -= poisson * (1 - pow(q / p, z - k));
- }
- return sum;
+    double p = 1.0 - q;
+    double lambda = z * (q / p);
+    double sum = 1.0;
+    int i, k;
+    for (k = 0; k <= z; k++)
+    {
+        double poisson = exp(-lambda);
+        for (i = 1; i <= k; i++)
+        poisson *= lambda / i;
+        sum -= poisson * (1 - pow(q / p, z - k));
+    }
+    return sum;
 }
-```
+``````
 
 > Running some results, we can see the probability drop off exponentially with z.
 >
@@ -146,6 +146,80 @@ double AttackerSuccessProbability(double q, int z)
 p > q と仮定すると、攻撃者が追いつく確率は、追いつかなければいけないブロック数に応じて指数関数的に下がります。もし攻撃者が幸運に恵まれないならば、攻撃者の勝ち目とともに、攻撃者のチャンスはビハインドを受けるごとに小さく消えていきます。
 
 ここで、新しいトランザクションの受信者が、送信者がトランザクションを変更できないことを十分に確信するまで、どのくらいの時間を待つ必要があるか検討してみましょう。送信者が、しばらくの間受信者に支払いを行なったと信じ込ませ、その後ある程度時間が経ったらその支払いを送信者自身に戻すべくトランザクションを切り替えようとする攻撃者であると仮定してみます。切り替えが起こると受信者には警告が届きますが、送信者は警告が手遅れであることを期待します。
+
+受信者は新しいキーペアを生成し、署名の直前に公開鍵を送信者に与えます。これを続けることで、送信者が幸運に恵まれてその瞬間にトランザクションを実行するまで、送信者があらかじめブロックチェーンを用意することをできなくします。トランザクションが送信されると、不正な送信者は、送信したトランザクションの代替バージョンを含むパラレルチェーン上で秘密裡に作業を開始します。
+
+受信者は、トランザクションがブロックに追加され、その後にzブロックがリンクされるまで待機します。受信者は攻撃者がどの程度ブロックを拡張したか正確に把握していませんが、善良なブロックが平均ブロック作成時間であったと仮定すると、攻撃者の潜在的な拡張は期待値のポアソン分布になります。
+
+![Formula2](/img/bitcoin_calc_2_pdf.png)
+
+攻撃者がその時点でも追いつく可能性のある確率を得るために、攻撃者がその時点から追いつく可能性のある進捗の量ごとにポアソン密度を掛けます：
+
+![Formula3](/img/bitcoin_calc_3_pdf.png)
+
+分布の無限の項を合計するのを避けるために整理すると、
+
+![Formula4](/img/bitcoin_calc_4_pdf.png)
+
+以上をC言語に直すと、
+
+```
+#include <math.h>
+double AttackerSuccessProbability(double q, int z)
+{
+    double p = 1.0 - q;
+    double lambda = z * (q / p);
+    double sum = 1.0;
+    int i, k;
+    for (k = 0; k <= z; k++)
+    {
+        double poisson = exp(-lambda);
+        for (i = 1; i <= k; i++)
+        poisson *= lambda / i;
+        sum -= poisson * (1 - pow(q / p, z - k));
+    }
+    return sum;
+}
+```
+
+いくつかの結果を実行すると、確率はzが増すごとに指数関数的に低下することがわかります。
+
+ * q=0.1
+   * z=0　　P=1.0000000
+   * z=1　　P=0.2045873
+   * z=2　　P=0.0509779
+   * z=3　　P=0.0131722
+   * z=4　　P=0.0034552
+   * z=5　　P=0.0009137
+   * z=6　　P=0.0002428
+   * z=7　　P=0.0000647
+   * z=8　　P=0.0000173
+   * z=9　　P=0.0000046
+   * z=10　　P=0.0000012
+ * q=0.3
+   * z=0　　 P=1.0000000
+   * z=5　　 P=0.1773523
+   * z=10　　P=0.0416605
+   * z=15　　P=0.0101008
+   * z=20　　P=0.0024804
+   * z=25　　P=0.0006132
+   * z=30　　P=0.0001522
+   * z=35　　P=0.0000379
+   * z=40　　P=0.0000095
+   * z=45　　P=0.0000024
+   * z=50　　P=0.0000006
+
+Pを0.1％未満として解くと、
+
+ * P < 0.001
+   * q=0.10　　z=5
+   * q=0.15　　z=8
+   * q=0.20　　z=11
+   * q=0.25　　z=15
+   * q=0.30　　z=24
+   * q=0.35　　z=41
+   * q=0.40　　z=89
+   * q=0.45　　z=340
 
 ## 解説
 
