Update Blog “2018-09-30-ビットコイン原論文解説　第11章「計算」”

--- a/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
+++ b/src/pages/blog/2018-09-30-ビットコイン原論文解説　第11章「計算」.md
@@ -225,7 +225,8 @@ Pを0.1％未満として解くと、
 
 ### まとめ
 
-* 
+* 善意なノードと攻撃者の間のブロックチェーン拡張競争では、善良なノードが攻撃者よりも次のブロックを見つける可能性が高い時、攻撃者がビハインドを追いつく可能性は指数関数的に下がる。
+* 新しいトランザクションの受信者は、ブロックが作成されればされるほど、攻撃者によってトランザクションを改ざんされないと十分に確信を得ることができる。
 
 ### 詳しい解説
 
